@@ -148,7 +148,7 @@ Posterior model objects
 #@stk_kreq_qr/stk_squared_seminorm   [internal]
 #@stk_kreq_qr/stk_update             [internal]
 
-Model components: Covariance functions
+Model components: covariance functions
  stk_expcov_aniso
  stk_expcov_iso
  stk_gausscov_aniso
@@ -164,7 +164,7 @@ Model components: Covariance functions
  stk_discretecov
 #stk_noisecov        [deprecated]
 
-Model components: Radial basis functions
+Model components: radial basis functions
  stk_rbf_exponential
  stk_rbf_gauss
  stk_rbf_matern
@@ -179,7 +179,7 @@ Model components: Radial basis functions
 #stk_sf_matern32     [deprecated]
 #stk_sf_matern52     [deprecated]
 
-Model components: Linear model objects
+Model components: linear model objects
  @stk_lm_affine/stk_lm_affine
  @stk_lm_constant/stk_lm_constant
  @stk_lm_cubic/stk_lm_cubic
@@ -194,13 +194,13 @@ Model components: Linear model objects
 #@stk_lm_null/feval         [overload base]
 #@stk_lm_quadratic/feval    [overload base]
 
-Model components: Noise model objects [experimental]
- @stk_gaussiannoise_/stk_gaussiannoise_
+## Model components: noise model objects
+#@stk_gaussiannoise_/stk_gaussiannoise_                  [internal]
 #@stk_gaussiannoise_/disp                                [overload base]
 #@stk_gaussiannoise_/stk_covmat_noise                    [overload STK]
 #@stk_gaussiannoise_/stk_isnoisy                         [overload STK]
 #@stk_gaussiannoise_/stk_covmat                          [internal]
- @stk_gaussiannoise_het0/stk_gaussiannoise_het0
+#@stk_gaussiannoise_het0/stk_gaussiannoise_het0          [experimental]
 #@stk_gaussiannoise_het0/stk_variance_eval               [experimental]
 #@stk_gaussiannoise_het0/disp                            [overload base]
 #@stk_gaussiannoise_het0/fieldnames                      [overload base]
@@ -336,8 +336,10 @@ Miscellaneous: Pareto optimality
  stk_isdominated
  stk_paretofind
 
-Miscellaneous: Validation of models
+Miscellaneous: validation of models
  stk_distrib_normal_crps
+ stk_plot_histnormres
+ stk_plot_predvsobs
 
 #stk_commonsize              [internal]
 #stk_sprintf                 [internal]
@@ -481,7 +483,7 @@ Miscellaneous: Validation of models
 #@stk_hrect/stk_rescale      [overload STK]
 #@stk_hrect/stk_dataframe    [overload STK]
 
-## Optimizers
+Miscellaneous: optimizers for parameter estimation
  stk_minimize_boxconstrained
  stk_minimize_unconstrained
  stk_optim_isavailable
@@ -508,12 +510,12 @@ Miscellaneous: options, plots...
  stk_options_set
  stk_plot1d
 #stk_plot_shadedci    [internal]
- stk_plot_histnormres
- stk_plot_predvsobs
  stk_plot_probdom2d
+ stk_version
+
+Miscellaneous: unit tests
  stk_test
  stk_runtests
- stk_version
 
 #stk_gpquadform  [experimental]
 
